--- a/main/tasks/docker.yaml
+++ b/main/tasks/docker.yaml
@@ -31,6 +31,7 @@
       - docker-ce
       - docker-ce-cli
       - containerd.io
+      - docker-compose-plugin
   notify:
     - enable docker
     - start docker
