--- a/main/files/wordpress.compose.yaml
+++ b/main/files/wordpress.compose.yaml
@@ -5,36 +5,32 @@ networks:
     external: true
   app:
 
-volumes:
-  mariadb_data:
-  wordpress_data:
-
 services:
   mariadb:
-    image: localhost/bitnami/mariadb:11.2
+    image: localhost/library/mariadb:11.3
     container_name: mariadb
     networks:
       - app
     volumes:
-      - mariadb_data:/bitnami/mariadb
+      - /data/mariadb_data:/var/lib/mysql
     environment:
-      - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_USER=user
-      - MARIADB_DATABASE=wordpress
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
 
   wordpress:
-    image: localhost/bitnami/wordpress:6
+    image: localhost/library/wordpress:6
     container_name: wordpress
     networks:
       - web
       - app
     volumes:
-      - wordpress_data:/bitnami/wordpress
+      - wordpress_data:/var/www/html
     depends_on:
       - mariadb
     environment:
-      - ALLOW_EMPTY_PASSWORD=yes
-      - WORDPRESS_DATABASE_HOST=mariadb
-      - WORDPRESS_DATABASE_PORT_NUMBER=3306
-      - WORDPRESS_DATABASE_USER=user
-      - WORDPRESS_DATABASE_NAME=wordpress
+      WORDPRESS_DB_HOST: mariadb
+      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_USER: user
+      WORDPRESS_DB_PASSWORD: password
